Folder hierarchy restructure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,5 +3,5 @@ project(player_k C)
 
 set(CMAKE_C_STANDARD 11)
 
-add_executable(player_k main.c
-        colors.h)
+add_executable(player_k src/main.c
+        src/colors.h)
